Use https for all submodules to be more corporate firewall friendly

--- a/.gitmodules
+++ b/.gitmodules
@@ -24,10 +24,10 @@
 	url = https://github.com/vim-scripts/FuzzyFinder.git
 [submodule "bundle/snipmate.vim"]
 	path = bundle/snipmate.vim
-	url = git://github.com/msanders/snipmate.vim.git
+	url = https://github.com/msanders/snipmate.vim.git
 [submodule "bundle/mustache"]
 	path = bundle/mustache
-	url = git://github.com/juvenn/mustache.vim.git
+	url = https://github.com/juvenn/mustache.vim.git
 [submodule "bundle/matchit.vim"]
 	path = bundle/matchit.vim
 	url = https://github.com/tsaleh/vim-matchit.git
